# empty

./: .gitignore  .gitlab-ci.yml  README.md
include/: date.h  exam.h  server.h  session.h  student.h  student_id.h  student_info.h  subject.h  teacher.h  teacher_id.h  teacher_info.h
server_code/: CMakeLists.txt  server_run.cpp
server_code/include/: date.h  exam.h  server.h  session.h  student_info.h  subject.h  teacher_info.h
server_code/source/: date.cpp  exam.cpp  server.cpp  session.cpp  subject.cpp
source/: date.cpp  exam.cpp  server.cpp  session.cpp  student.cpp  student_id.cpp  student_info.cpp  subject.cpp  teacher.cpp  teacher_info.cpp  tecacher_id.cpp
student_code/: CMakeLists.txt  student_run  student_run.cpp
student_code/source/: basic_functions.cpp  service_functions.cpp  start_functions.cpp
teacher_code/: CMakeLists.txt  teacher_run  teacher_run.cpp
teacher_code/source/: basic_functions.cpp  service_functions.cpp  start_functions.cpp
